--- a/sass/.gitlab-ci.yml
+++ b/sass/.gitlab-ci.yml
@@ -1,16 +1,18 @@
-run_tests:
-  before_script:
-    - echo "Preparing test data..."
-  script:
-    - echo "Running test..."
-  after_script:
-    - echo "Cleaning up temporary files..."
-
-build_image:
-  script:
-    - echo "Building the docker image..."
-
-push_image:
-  script:
-    - echo "Logging into docker registry..."
-    - echo "Pushing docker image to registry..."
+name: syhunt test
+on:
+  push:
+    branches:
+      - main
+jobs:
+  build:
+    runs-on: [self-hosted, Windows, X64]
+    steps:
+      - uses: actions/checkout@v2
+      - run: Start-CodeScan -pfcond 'medium' -output 'report.pdf'
+      - name: 'Syhunt Report'
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+         name: syhunt-report
+         path: report.pdf
+         if-no-files-found: error
